--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "http://sebastian-espeset.github.io/maidenkingsite",
+  "homepage": "https://sebastian-espeset.github.io/maidenkingsite",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
