changes private prop in pckg to false

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maidenking",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://sebastian-espeset.github.io/maidenkingsite",
