removes a slash from homepage prop

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sebastian-espeset.github.io/maidenkingsite/",
+  "homepage": "https://sebastian-espeset.github.io/maidenkingsite",
   "name": "maidenking",
   "private": false,
   "version": "0.0.0",
