--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy" : "npm run build",
-    "deploy" : "npm run build && gh-pages -d dist",
-    "test":"npm run test"
+    "predeploy": "npm run build",
+    "deploy": "npm run build && gh-pages -d dist",
+    "test": "npm run test"
   },
   "dependencies": {
+    "dotenv": "^16.1.4",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.62.1"
