changes homepage in pckg

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sebastian-espeset.github.io/maidenkingsite",
+  "homepage": "https://maidenkingmusic.com",
   "name": "maidenking",
   "private": false,
   "version": "0.0.0",
