--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "npm run test"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "dotenv": "^16.1.4",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
